--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<title>回滚顶部</title>
+	<title>rollback</title>
 	<style type="text/css">
 	*{margin: 0;padding: 0;}
 	.content {width:1190px;margin: 0 auto;}
